Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11685

sql_mode can't be set with non-ascii connection charset

    XMLWordPrintable

Details

    Description

      MariaDB [test]> set sql_mode = 'NO_ENGINE_SUBSTITUTION';
      Query OK, 0 rows affected (0.00 sec)
       
      MariaDB [test]> set character_set_connection=utf32;
      Query OK, 0 rows affected (0.00 sec)
       
      MariaDB [test]> set sql_mode = 'NO_ENGINE_SUBSTITUTION';
      ERROR 1231 (42000): Variable 'sql_mode' can't be set to the value of 'NO_ENGINE_SUBSTITUTION'
      

      Attachments

        Issue Links

          Activity

            People

              nirbhay_c Nirbhay Choubey (Inactive)
              nirbhay_c Nirbhay Choubey (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.5h
                  3.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.